--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="appewtc.masterung.healthrecord" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,9 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity" >
+        <activity android:name=".SignUpActivity" android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".RecordActivity" >
+        <activity android:name=".RecordActivity" android:screenOrientation="portrait" >
         </activity>
     </application>
 
